# preventive-health-assistant

./: .dockerignore  .env.example  .gitignore  DATABASE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.prod.txt  requirements.txt
alembic/: env.py
alembic/versions/: 20260424_0000_0001_baseline_schema.py
config/: __init__.py  settings.py
data/: cohort_averages.json
data/processed/: X_test.csv  X_train.csv  feature_names.txt  y_test.csv  y_train.csv
data/processed/cvd/: X_test.csv  X_train.csv  feature_names.txt  y_test.csv  y_train.csv
data/processed/hypertension/: X_test.csv  X_train.csv  feature_names.txt  y_test.csv  y_train.csv
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/__tests__/: test-utils.jsx
frontend/src/api/: auth.js  chat.js  client.js  health.js
frontend/src/components/: AssessmentResults.jsx  AssessmentResults.module.css  AssessmentStep.jsx  AssessmentStep.module.css  AssessmentWizard.jsx  AssessmentWizard.module.css  ChatInput.jsx  ChatInput.module.css  ChatMessage.jsx  ChatMessage.module.css  ChatWindow.jsx  ChatWindow.module.css  CohortComparison.jsx  CohortComparison.module.css  ConditionSelector.jsx  ConditionSelector.module.css  ExplanationPanel.jsx  ExplanationPanel.module.css  RecommendationList.jsx  RecommendationList.module.css  RiskResultCard.jsx  RiskResultCard.module.css  Sidebar.jsx  Sidebar.module.css  StepProgressBar.jsx  StepProgressBar.module.css  TabBar.jsx  TabBar.module.css  TrendDashboard.jsx  TrendDashboard.module.css  WhatIfSimulator.jsx  WhatIfSimulator.module.css
frontend/src/context/: AuthContext.jsx
frontend/src/contexts/: AuthContext.jsx  ThemeContext.jsx
models/saved/: cvd_model_20260424_120213.joblib  cvd_model_20260424_120213_metadata.json  diabetes_model_20260204_203539.joblib  diabetes_model_20260204_203539_metadata.json  hypertension_model_20260424_120547.joblib  hypertension_model_20260424_120547_metadata.json
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_model_evaluation.ipynb  05_shap_analysis.ipynb
scripts/: README_PUSH.md  download_nhanes.py  push_changes.sh  push_via_ssh.sh  run_api.py
src/api/: __init__.py  auth.py  main.py
src/api/db/: database.py  (+2 more)
src/chatbot/: __init__.py
src/lifestyle/: answer_normalizer.py  feature_mapper.py
src/ml/: __init__.py
src/profile/: models.py  profile_service.py  rag_store.py  store.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_chatbot_endpoint.py  test_cvd_hypertension_endpoints.py
tests/ml/: test_model.py
tests/unit/: test_chatbot_modules.py  test_prediction_service.py  test_schemas.py
(+81 files in other folders)
